# tiflash-1

./: CMakeLists.txt
contrib/tiflash-columnar-hub/: Cargo.toml
contrib/tiflash-columnar-hub/hub-runtime/src/: cloud_helper.rs  columnar_impls.rs  interfaces.rs
dbms/: CMakeLists.txt
dbms/src/Columns/: ColumnVector.cpp  ColumnVector.h
dbms/src/Common/: BackgroundTask.cpp  CurrentMetrics.cpp  MemoryAllocTrace.cpp  MemoryAllocTrace.h  MemoryTracker.cpp  MemoryTracker.h  PODArray.h  TiFlashMetrics.cpp  TiFlashMetrics.h
dbms/src/DataStreams/: FilterBlockInputStream.cpp  MarkInCompressedFile.h
dbms/src/Encryption/: FileProvider.cpp
dbms/src/Flash/: FlashService.cpp
dbms/src/Flash/Coprocessor/: DAGStorageInterpreter.cpp
dbms/src/IO/: ChecksumBuffer.h  IOThreadPools.h
dbms/src/Interpreters/: AsynchronousMetrics.cpp  Context.cpp  Settings.h  SettingsCommon.h
dbms/src/Operators/: FilterTransformOp.cpp
dbms/src/Server/: BgStorageInit.cpp  CMakeLists.txt  Server.cpp  main.cpp
dbms/src/Storages/: StorageDeltaMerge.cpp  StorageDeltaMerge.h  StorageDisaggregated.h  StorageDisaggregatedColumnar.cpp  StorageDisaggregatedRemote.cpp
dbms/src/Storages/DeltaMerge/UncommittedZone/Proto/: CMakeLists.txt  uncommitted.proto
dbms/src/TestUtils/: gtests_dbms_main.cpp
dbms/src/TiDB/Schema/: TiDB.cpp  (+1 more)
docs/superpowers/plans/: 2026-07-01-fts-ngram-ddl-implementation.md
docs/superpowers/specs/: 2026-05-20-tici-rss-file-memory-control-design.md  2026-07-01-fts-ngram-ddl-design.md
metrics/grafana/: tiflash_summary.json
tests/docker/next-gen-utils/: Makefile  topo.yaml
(+150 files in other folders)
